# kenboard

./: .env.example  .flake8  .gitignore  .ken2  .ken3  .pdm-python  ARCHITECTURE.md  CLAUDE.md  INSTALL.md  PHILOSOPHY.md  README.md  app.js  biome.json  build.py  data.json  index.html  jsconfig.json  main.typ  package-lock.json  package.json  publish.sh  pyproject.toml  sonar-project.properties  style.css  vite.config.js  vulture_whitelist.py
.github/workflows/: publish.yml  python-package.yml
archive/: build.py  data.json
archive/cat/: education.html  finance.html  technique.html
cat/: education.html  famille.html  finance.html  immobilier.html  sante.html  technique.html
doc/: api-keys.md  api.md  architecture.md  auth-user.md  authentication.md  burndown.md  code-quality.md  ken-cli.md  oidc-adfs.md  openapi.yaml  permissions.md  quality-history.csv
extension/: README.md  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
extension/content/: annotate.bundle.js  annotate.bundle.js.LEGAL.txt  annotate.src.js  buildMarkdown.js  buildMarkdown.test.js  paintbrushSvg.js  paintbrushSvg.test.js
migrations/: 0001.create_categories.sql  0002.create_projects.sql  0003.create_tasks.sql
pentest/: REPORT.md  _auth_setup.py  _common.py  auth_admin_only.py  auth_api_keys.py  auth_bypass.py  auth_csrf.py  auth_mass_assignment.py  auth_priv_esc.py  auth_session.py  auth_xss_stored.py  brute_force.py  cookies.py  cors.py  debug_console.py  endpoints.py  fingerprint.py  headers.py  info_disclosure.py  open_redirect.py  run_all.py  run_auth.py  sqli.py  traversal.py  xss.py
project/: 2113ch-website.html  api-v2.html  backup-strategy.html  bilan-annuel.html  cicd-pipeline.html  docs-techniques.html  dossier-hypotheque.html  infra-ansible.html  kanban-dashboard.html  migration-freebsd.html  monitoring-stack.html  recherche-terrain.html  renovation-appart.html  ssl-pki-renewal.html  vacances-ete.html
scripts/: cleanup_perf_data.py  pixelart.py  quality_metrics.py  screenshots.py  seed_perf_data.py  sign-firefox-extension.sh  sonar_gate.py
src/dashboard/: __init__.py  activity.py  agent_guide.md  app.py  auth.py  auth_api_key.py  auth_login.py  auth_oidc.py  auth_register.py  auth_reset.py  auth_resolve.py  auth_scopes.py  auth_session.py  auth_user.py  cli.py  cli_burndown.py  config.py  db.py  email.py  errors.py  ken.py  logging.py  onboarding.py  password_strength.py  perf.py  perf_collector.py  wiki.py
tests/: _schema.py  conftest.py
tests/e2e/: conftest.py  test_admin_keys.py  test_auth_user.py  test_dashboard.py  test_email_flows.py  test_ken.py
tests/integration/: test_auth_oidc.py  test_csrf.py
tests/sql/: schema.sql
tests/unit/: test_activity.py  test_admin_only.py  test_api.py  test_api_keys.py  test_auth_oidc.py  test_auth_resolve.py  test_auth_user.py  test_author_leaderboard.py  test_board_pie.py  test_burndown.py  test_cli.py  test_csrf.py  test_email.py  test_fatal_error.py  test_forgot_password.py  test_ken.py  test_logging.py  test_logout_invalidates.py  test_models.py  test_page_routes.py  test_password_strength.py  test_perf.py  test_quality_metrics.py  test_queries.py  test_registration.py  test_security_invariants.py  test_taskers_chart.py  test_user_scopes.py  test_weekly_authors.py  test_wiki.py  test_wiki_routes.py
wiki/: index.md  log.md
wiki/backend/: arch-introduce-clean-architecture-pattern-190.md  index.md  sys-fatal-error-268.md
wiki/cli/: cli-help-version-207.md  index.md  ken-move-to-review-605.md
wiki/docs/: doc-auth-users-api-12.md  doc-install-initialisation-du-user-q-130.md  doc-readme-liens-casses-vers-doc-md-256.md  doc-readme-screenshot-missing-255.md  doc-readme-workflow-wiki-et-agent-driven-376-suite-428.md  doc-refresh-des-docs-restaur-es-contre-l-tat-courant-du-code-260.md  doc-refresh-des-docs-restaurees-contre-l-etat-courant-du-code-260.md  docs-install-md-documenter-tous-les-parametres-env-600.md  index.md  marketing-readme-traduire-en-anglais-196.md  marketing-sous-titre-du-github-195.md  onboarding-la-page-doit-contenir-les-bonnes-pratiques-kenboard-143.md  readme-ajouter-une-notion-entreprise-avec-les-connexions-idp-oidc-145.md  readme-ameliorer-l-experience-158.md  readme-badge-sonarcloud-77.md  ui-screenshot-pour-le-readme-md-3.md
wiki/extension/: bug-extension-alt-k-ne-declenche-pas-l-annotation-sur-macos-529.md  bug-extension-paintbrush-le-badge-est-inclickable-en-mode-dessin-z-index-overflow-556.md  bug-extension-paintbrush-r-t-volent-les-frappes-pendant-la-saisie-de-texte-555.md  deploy-auto-zip-extension-dans-publish-sh-github-release-485.md  extension-afficher-la-version-dans-la-page-de-settings-515.md  extension-annotations-epic-520.md  extension-annotations-phase-1-scaffold-build-esbuild-libs-ancrage-521.md  extension-annotations-phase-2-content-script-shadow-dom-scaffold-522.md  extension-annotations-phase-3-activation-alt-k-esc-badge-523.md  extension-annotations-phase-4-selection-toolbar-highlight-only-524.md  extension-annotations-phase-5-highlight-rendering-persistance-par-url-canonique-525.md  extension-annotations-phase-6-drawer-push-markdown-vers-kenboard-526.md  extension-annotations-phase-7-tests-docs-527.md  extension-capture-textuelle-structuree-remplace-le-screenshot-png-514.md  extension-configuration-http-403-sur-onboarding-link-colle-509.md  extension-firefox-persistante-503.md  extension-icon-502.md  extension-onboarding-504.md  extension-paintbrush-conversion-html-svg-legere-de-la-page-background-context-564.md  extension-paintbrush-overlay-epic-remplace-520-541.md  extension-paintbrush-phase-2-affichage-attachement-sur-la-tache-543.md  extension-paintbrush-phase-3-scaffold-overlay-svg-activation-alt-p-544.md  extension-paintbrush-phase-4-outil-rectangle-545.md  extension-paintbrush-phase-5-outil-texte-546.md  extension-paintbrush-phase-6-push-svg-md-extrait-547.md  extension-paintbrush-phase-7-cleanup-520-548.md  extension-paintbrush-phase-8-tests-docs-549.md  extension-paintbrush-selectionner-deplacer-redimensionner-editer-supprimer-les-shapes-557.md  index.md  (+2 more)
(+422 files in other folders)
