[project]
name = "kenboard"
version = "0.1.138"
description = "Project management dashboard with kanban boards, burndown charts, and category-based organization. Flask API backend with MySQL storage and static HTML generation."
authors = [
    { name = "Q" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

keywords = ["kenboard", "kanban", "project-management", "flask", "mysql", "dashboard"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Flask",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "flask>=3.1",
    "flask-cors>=5.0",
    "flask-login>=0.6",
    "pymysql[rsa]>=1.1",
    "aiosql>=12.0",
    "yoyo-migrations>=8.2",
    "pydantic>=2.11",
    "structlog>=24.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "argon2-cffi>=25.1.0",
    "flask-limiter>=4.1.1",
    "authlib>=1.6.9",
    "requests>=2.28",
    # ``ken wiki`` parses YAML frontmatter from ARCHITECTURE.md (#376);
    # types-PyYAML is already a dev dep — bring the runtime lib in too.
    "pyyaml>=6.0",
    # ``ken wiki build`` renders the MD tree as standalone HTML (#376d).
    "markdown>=3.5",
    "zxcvbn>=4.5.0",
]

[project.optional-dependencies]
# Production WSGI server. Pulled in via ``pip install "kenboard[prod]"``
# so users who only need the CLI (``ken``) or the static build pipeline
# don't carry the dependency. Consumed by the ``kenboard prod`` command
# in ``src/dashboard/cli.py``.
prod = ["gunicorn>=21.0"]

# Make ``requests`` / ``ssl`` honour the OS truststore so OIDC against an
# IdP with an internal/self-signed CA (e.g. ADFS behind a private root
# installed via certctl on FreeBSD) works without setting
# REQUESTS_CA_BUNDLE manually (#344). The package patches at interpreter
# startup via a ``.pth`` file — no kenboard code change.
#
# Kept as an opt-in extra because it pulls in ``truststore``, which clashes
# with ``pdm``'s own ``truststore`` instrumentation and causes a recursion
# in ``ssl.SSLContext.verify_mode`` during dependency resolution. Operators
# with an internal IdP CA install via ``pip install "kenboard[oidc]"`` (or
# ``[prod,oidc]``); developer / CI / test environments — where pdm is in
# use — leave the extra off.
oidc = ["pip-system-certs>=4.0"]

[project.scripts]
kenboard = "dashboard.cli:cli"
ken = "dashboard.ken:cli"

[dependency-groups]
dev = [
    "pdm>=2.26.0",
    "pdm-bump>=0.9.0",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.2.0",
    "pytest-playwright>=0.6",
    "httpx>=0.24.0",
    "black>=25.0",
    "isort>=6.0",
    "docformatter>=1.7",
    "ruff>=0.13.0",
    "flake8>=7.3",
    "flake8-docstrings>=1.7.0",
    "flake8-docstrings-complete>=1.3.0",
    "mypy>=1.18",
    "types-PyYAML>=6.0",
    "interrogate>=1.7.0",
    "vulture>=2.14",
    "refurb>=2.2.0",
    "absolufy-imports>=0.3.1",
    "gunicorn>=21.0",
    "oidc-provider-mock>=0.3.4",
    "aiosmtpd>=1.4.6",
]
publish = [
    "twine>=6.2.0",
    "keyring>=25.7.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm-bump]
version-files = ["src/dashboard/__init__.py:__version__"]

# -- PDM Scripts --------------------------------------------------------------

[tool.pdm.scripts]

# Testing
test = "pytest tests/ -q --tb=short --ignore=tests/e2e"
test-quick = "pytest tests/ -q --tb=short -x --ignore=tests/e2e"
test-ci = "pytest tests/ -q --tb=short --ignore=tests/e2e --cov=src/dashboard --cov-report=xml --cov-report=term"
test-unit = "pytest tests/unit/ -q --tb=short"
test-integration = "pytest tests/integration/ -q --tb=short"
test-e2e = "pytest tests/e2e/ -q --tb=short"
test-cov = "pytest tests/ -q --tb=short --cov=src/dashboard --cov-report=term-missing --cov-report=html"

# Formatting
format = "black src/ tests/"
isort = "isort src/ tests/"
docformatter = { shell = "docformatter --recursive --in-place --wrap-summaries 88 --wrap-descriptions 88 --close-quotes-on-newline src/ tests/ || [ $? -eq 3 ]" }
absolufy = { shell = "find src/ -name '*.py' -exec absolufy-imports {} +" }

# Linting & type checking
lint = "ruff check --fix src/ tests/"
flake8 = "flake8 src/"
typecheck = "mypy src/"
interrogate = "interrogate src/"
vulture = "vulture src/ tests/ vulture_whitelist.py"
refurb = "refurb src/"

# Quality metrics snapshot (#783) & blocking gate (#788) — see doc/code-quality.md
metrics = "python scripts/quality_metrics.py"
metrics-record = "python scripts/quality_metrics.py --record"
metrics-gate = "python scripts/quality_metrics.py --gate"

# JS toolchain (#251) — Vite bundler, Vitest unit tests, Biome lint+format,
# tsc --noEmit for opt-in JSDoc type-check.
js-install = { shell = "npm ci" }
js-lint = { shell = "npx biome check src/dashboard/static/js" }
js-lint-fix = { shell = "npx biome check --write src/dashboard/static/js" }
js-typecheck = { shell = "npx tsc --noEmit -p jsconfig.json" }
js-test = { shell = "npx vitest run --coverage" }
js-build = { shell = "npx vite build" }
# #520 (annotations epic) — bundle the extension content script + its npm deps
# (dom-anchor-text-quote, dom-anchor-text-position) into a single IIFE file
# Chrome/Firefox load via content_scripts. Separate from js-build because the
# extension is shipped as a release zip, not part of the main Vite bundle.
build-extension = { shell = "npm run build-extension" }

# Composite checks
check = { composite = ["isort", "docformatter", "format", "typecheck", "flake8", "interrogate", "refurb", "lint", "vulture", "js-lint", "js-typecheck", "js-test", "js-build", "test-quick", "metrics-gate"] }

# Build & generation
screenshots = "python scripts/screenshots.py"
clean = "rm -rf dist/ build/ .mypy_cache/ .pytest_cache/ htmlcov/ .coverage"

# Install
install = "pdm install"
install-dev = "pdm install -G dev"

# Version
version-show = "python -c \"import dashboard; print(dashboard.__version__)\"" # package still named dashboard internally
version-patch = "pdm bump -v patch"
version-minor = "pdm bump -v minor"
version-major = "pdm bump -v major"

# -- Ruff ---------------------------------------------------------------------

[tool.ruff.lint]
# Verrous métriques (#788, principe ratchet de doc/code-quality.md) : chaque
# famille de règles tombée à zéro est activée ici pour verrouiller l'acquis,
# en plus des règles ruff par défaut (E4, E7, E9, F). Dernière activation
# prévue : PLR1702 (imbrication ≤ 5 — dès sa sortie de preview ruff).
extend-select = [
    "RUF",     # règles ruff natives, RUF100 inclus depuis le palier 4
    "ARG",     # arguments inutilisés (acquis palier 2, ken #798)
    "BLE",     # blind except interdits sauf noqa argumenté (palier 2)
    "C901",    # complexité cyclomatique ≤ 10 (acquis ken #789)
    "DTZ",     # datetimes naïfs interdits (acquis ken #785)
    "EM",      # messages d'exception via variable (acquis palier 2)
    "FBT",     # booléens keyword-only dans les signatures (palier 2)
    "G",       # logging — log.exception plutôt que exc_info=True (palier 2)
    "PERF",    # perflint — comprehensions, incremental list build (palier 1)
    "PLC0415", # imports en tête de module (palier 2 — CLIs exemptés ci-dessous)
    "PLR",     # famille pylint-refactor complète (palier 4 — args ≤ 5 inclus,
               # les commandes click portent des noqa argumentés)
    "PTH",     # pathlib plutôt qu'os.path (acquis palier 2)
    "SLF",     # accès privés interdits sauf noqa argumenté (palier 2)
    "TRY",     # hygiène des raise/try (acquis palier 2)
    "UP017",   # datetime.UTC plutôt que timezone.utc
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests : datetimes naïfs tolérés (fixtures et comparaisons locales),
# complexité non bloquante (helpers de schéma séquentiels dans conftest) et
# familles "hygiène src" non imposées au code de test (mêmes exemptions que
# mypy strict / interrogate). Le gate métrique (#788) ne mesure que src/.
"tests/**" = ["DTZ", "C901", "ARG", "BLE", "EM", "FBT", "G", "PLC0415", "PLR", "PTH", "SLF", "TRY"]
# CLIs : lazy imports délibérés — chaque commande importe ses dépendances au
# moment de l'exécution pour garder le démarrage instantané (`ken` est
# stdlib-only au boot) et ne charger flask/yoyo/markdown/yaml qu'au besoin.
"src/dashboard/cli.py" = ["PLC0415"]
"src/dashboard/ken/**" = ["PLC0415"]

# -- Black --------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

# -- isort --------------------------------------------------------------------

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# -- mypy ---------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

# -- pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "e2e: marks end-to-end browser tests",
]

# -- coverage -----------------------------------------------------------------

[tool.coverage.run]
source = ["src/dashboard"]
omit = ["tests/*", "src/dashboard/__main__.py"]

[tool.coverage.report]
fail_under = 75
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
]

# -- vulture ------------------------------------------------------------------

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]

# -- interrogate --------------------------------------------------------------

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
exclude = ["tests", "docs", "build", "dist"]
generate-badge = "."

# -- docformatter -------------------------------------------------------------

[tool.docformatter]
recursive = true
wrap-summaries = 88
wrap-descriptions = 88
close-quotes-on-newline = true
